Add basic read-only DAG Model endpoints
