# airflow/api_connexion/schemas/common_schema.py
@@ -1,31 +1,55 @@
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements.  See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership.  The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License.  You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied.  See the License for the
+# specific language governing permissions and limitations
+# under the License.
+
 import datetime
+import typing
 
 import marshmallow
-import typing
 from dateutil import relativedelta
 from marshmallow import Schema, fields
 from marshmallow_oneofschema import OneOfSchema
 
 
 class CronExpression(typing.NamedTuple):
+    """Cron expression schema"""
     value: str
 
 
 class TimeDeltaSchema(Schema):
-    objectType = fields.Constant("time_delta", data_key="__type")
+    """Time delta schema"""
+
+    objectType = fields.Constant("TimeDelta", data_key="__type")
     days = fields.Integer()
     seconds = fields.Integer()
     microsecond = fields.Integer()
 
     @marshmallow.post_load
-    def make_timedelta(self, data, **kwargs):
+    def make_tim_edelta(self, data, **kwargs):
+        """Create time delta based on data"""
+
         if "objectType" in data:
             del data["objectType"]
         return datetime.timedelta(**data)
 
 
 class RelativeDeltaSchema(marshmallow.Schema):
-    objectType = fields.Constant("relative_delta", data_key="__type")
+    """Relative delta schema"""
+
+    objectType = fields.Constant("RelativeDelta", data_key="__type")
     years = fields.Integer()
     months = fields.Integer()
     days = fields.Integer()
@@ -43,7 +67,9 @@ class RelativeDeltaSchema(marshmallow.Schema):
     microsecond = fields.Integer()
 
     @marshmallow.post_load
-    def make_timedelta(self, data, **kwargs):
+    def make_relative_delta(self, data, **kwargs):
+        """Create relative delta based on data"""
+
         if "objectType" in data:
             del data["objectType"]
 
@@ -51,20 +77,32 @@ class RelativeDeltaSchema(marshmallow.Schema):
 
 
 class CronExpressionSchema(Schema):
-    objectType = fields.Constant("cron_expression", data_key="__type", required=True)
+    """Cron expression schema"""
+
+    objectType = fields.Constant("CronExpression", data_key="__type", required=True)
     value = fields.String(required=True)
 
     @marshmallow.post_load
     def make_cron_expression(self, data, **kwargs):
+        """Create cron expression based on data"""
         return CronExpression(data["value"])
 
 
 class ScheduleIntervalSchema(OneOfSchema):
+    """
+    Schedule interval.
+
+    It supports the following types:
+
+    * TimeDelta
+    * RelativeDelta
+    * CronExpression
+    """
     type_field = "__type"
     type_schemas = {
-        "time_delta": TimeDeltaSchema,
-        "relative_delta": RelativeDeltaSchema,
-        "cron_expression": CronExpressionSchema,
+        "TimeDelta": TimeDeltaSchema,
+        "RelativeDelta": RelativeDeltaSchema,
+        "CronExpression": CronExpressionSchema,
     }
 
     def _dump(self, obj, *, update_fields=True, **kwargs):
@@ -74,11 +112,12 @@ class ScheduleIntervalSchema(OneOfSchema):
         return super()._dump(obj, update_fields=update_fields, **kwargs)
 
     def get_obj_type(self, obj):
+        """Select schema based on object type"""
         if isinstance(obj, datetime.timedelta):
-            return "time_delta"
+            return "TimeDelta"
         elif isinstance(obj, relativedelta.relativedelta):
-            return "relative_delta"
+            return "RelativeDelta"
         elif isinstance(obj, CronExpression):
-            return "cron_expression"
+            return "CronExpression"
         else:
             raise Exception("Unknown object type: {}".format(obj.__class__.__name__))
